new file:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   explore.html 	modified:   index.html

--- a/explore.html
+++ b/explore.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/styleguide.css">
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>explore</title>
 </head>
 <body>
+    <nav>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a> </div>
+        <ul>
+            <li> <a href="explore.html" class="navlink">Explore</a> </li>
+            <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
+            <li> <a href="events.html" class="navlink">Events</a></li>
+            <li> <a href="visit-us.html" class="navlink">Visit us</a></li>
+            <li><a href="get-involved.html" class="navlink">Get involved</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <header>
+            <h1>Community Science Museum</h1>
+            <div class="hero">
+                <img src="images/kids.png" alt="2 kids playing in sand with dinosaur bones" style="width: 100%; height: auto;">
+            </div>
+        </header>
+
+        <div class="headline-box"><h1 class="section-headline">For kids</h1></div>
+        <section class="infotext">
+            <p class="infop">Are you a young person looking to learn more about science? Come on down 
+                to our museum, theres plenty to see and do.
+
+                You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? 
+                Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
+        </section>
+
+        <div class="container-of-yellowbox">
+            <div class="yellowbox">
+                <h2 class="buttonh2">Young star club</h2>
+                <p>we also have the Young stars club which meets once a week on a saturday between</p>
+                <a href="explore.html" class="navlink"><img src="images/black-arrow.png" alt="black arrow" class="arrow" ></a> 
+            </div>
+            <div class="button">
+                <h2 class="buttonh2">Exhibitions</h2>
+                <a href="exhibition.html" class="navlink"><img src="images/black-arrow.png" alt="black arrow" class="arrow" ></a> 
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+    </main>
     
 </body>
 </html>
