--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          <img src="images/fossil.png"  alt="fossil on display" class="img-on-index"></a>   
     </section>
 
-   <div class="button singel">
+   <div class="button-singel">
         <h2 class="buttonh2">special events and exhibitions</h2>
         <a href="events.html" class="navlink"><img src="images/black-arrow.png" alt="black arrow" class="arrow" ></a> 
     </div>
