modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	deleted:    images/wind.png 	new file:   images/wind1.png 	modified:   index.html 	modified:   visit-us.html

--- a/events.html
+++ b/events.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/styleguide.css">
+    <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>events</title>
 </head>
 <body>
-    
+    <nav>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
+            class="navlogo" style="width: auto; height: 60px;"></a> </div>
+        <ul>
+            <li> <a href="explore.html" class="navlink">Explore</a> </li>
+            <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
+            <li> <a href="events.html" class="navlink">Events</a></li>
+            <li> <a href="visit-us.html" class="navlink">Visit us</a></li>
+            <li><a href="get-involved.html" class="navlink">Get involved</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <header>
+            <h1>Special Events and Exhibitions</h1>
+        </header>
+
+        <section class="event-section">
+          <div class="event">
+            <h2>Night in the museum</h2>
+            <p>Get your family together for an exciting night 
+                in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and 
+                get ready to rough it as we go exploring the wonders of science.</p>
+          </div>
+          <div class="event-img">
+            <img src="images/night-dino.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+        </div>
+        </section>
+
+        <section class="event-section">
+            <div class="event">
+              <h2>Visiting Professor of Aeronautics</h2>
+              <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts 
+                Institute of Technology will be delivering 3 lectures on the development of aeronautics and 
+                where the future lies in this exciting space.</p>
+            </div>
+            <div class="event-img">
+              <img src="images/planet-small.png" alt="illustration of a planet with stars around" style="width: 100%; height: auto;">  
+          </div>
+          </section>
+
+          <section class="event-section">
+            <div class="event">
+              <h2>Energetica Exhibition on Loan</h2>
+              <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the 
+                Community Science Museum. Its a series of installations that allow visitors to 
+                experience the power of the elements as we harness them</p>
+            </div>
+            <div class="event-img">
+              <img src="images/wind1.png" alt="illustration of a planet with stars around" style="width: auto; height: auto;">  
+              <img src="images/wind1.png" alt="illustration of a planet with stars around" style="width: auto; height: auto;">  
+          </div>
+          </section>
+          <section class="infotext">
+              <p class="infop-variant2">
+                 Follow us on social-media to get information
+                 on new events and exhibitions!
+             </p>
+            </section>
+            <div class="image-over-section">
+                <img src="images/two-rocks.png" alt="cartoon illutration with two rocks" style="width: 100%; height: auto;">
+            </div>
+    </main>
+    <footer>
+        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <h3>2024 - Community Science Museum</h3>
+
+       </footer>
 </body>
 </html>
