--- a/get-involved.html
+++ b/get-involved.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/styleguide.css">
+    <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>get-involved</title>
 </head>
 <body>
-    
+    <nav>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
+            class="navlogo" style="width: auto; height: 60px;"></a> </div>
+        <ul>
+            <li> <a href="explore.html" class="navlink">Explore</a> </li>
+            <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
+            <li> <a href="events.html" class="navlink">Events</a></li>
+            <li> <a href="visit-us.html" class="navlink">Visit us</a></li>
+            <li><a href="get-involved.html" class="navlink">Get involved</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <header>
+            <h1>Special Events and Exhibitions</h1>
+        </header>
+
+        <section class="event-section">
+            <div class="event-img">
+                <img src="images/two-rocks.png" alt="two rocks cartoon illutration" style="width: 100%; height: auto;">  
+            </div>
+          <div class="event">
+            <h2>Support</h2>
+            <p>There are various ways you can support the museum. Donations are very welcome and 
+                are an important way we keep this museum open and accessible to the whole community.</p>
+          </div>
+        </section>
+        <div class="container-of-yellowbox">
+            <div class="yellowbox">
+                <h2 class="buttonh2">Volunteer</h2>
+                <p class="yellowbox-p">A number of people volunteer their time and effort to keep the 
+                    displays in good order and ready for visitors to come and enjoy.</p>
+                    <p class="yellowbox-p"> You can help volunteer in a number of different spheres.</p> 
+                        <p class="yellowbox-p">Please contact us if you 
+                    like to find out more about how you can get involved.</p>  
+            </div>
+            <div class="imagebox">
+                <img src="images/girl-scientsist.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+            </div>
+        </div>
+        <div class="container-of-yellowbox">
+            <div class="imagebox">
+                <img src="images/scientest.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+            </div>
+            <div class="yellowbox">
+                <h2 class="buttonh2">Internships</h2>
+                <p class="yellowbox-p">Are you interested in working in a museum? </p>
+                    <p class="yellowbox-p">Do you enjoy the fun and 
+                    excitement of sharing the wonders of nature with people? </p>
+
+                    <p class="yellowbox-p">Well you could be just the right person to enjoy an internship at the museum.</p>  
+            </div>
+            
+        </div>
+        <div class="image-over-section">
+            <img src="images/dino.png" alt="cartoon illutration of a skeleton t-rex" style="width: 100%; height: auto;">
+        </div>
+
+    </main>
+
+    <footer>
+        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <h3>2024 - Community Science Museum</h3>
+
+       </footer>
 </body>
 </html>
