--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
             many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life.</p>
         
     </section>
-       <p class="singel-p">Apart from the dinosaur exhibits.. they only come to life <span class="infostartword">at night</span>  when everyone has gone home.</p>
-
        <div class="button-box">
         <div class="button">
             <h2 class="buttonh2">Visit us</h2>
@@ -86,7 +84,7 @@
     </main>
 
     <footer>
-        <div><a href="#top" class="footer-link">back to top</a></div>
+        <div><a href="#top" class="footer-link">Back to top</a></div>
         <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
         <h3>2024 - Community Science Museum</h3>
 
