--- a/exhibition.html
+++ b/exhibition.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/styleguide.css">
+    <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>exhibition-spaces</title>
 </head>
 <body>
+    <nav>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
+            class="navlogo" style="width: auto; height: 60px;"></a> </div>
+        <ul>
+            <li> <a href="explore.html" class="navlink">Explore</a> </li>
+            <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
+            <li> <a href="events.html" class="navlink">Events</a></li>
+            <li> <a href="visit-us.html" class="navlink">Visit us</a></li>
+            <li><a href="get-involved.html" class="navlink">Get involved</a></li>
+        </ul>
+    </nav>
+    <main>
+        <header>
+            <h1>Exhibition Spaces</h1>
+            <div class="hero">
+                <img src="images/planet-stars.png" alt="illustration of a planet with stars around" style="width: 100%; height: auto;">
+            </div>
+        </header>
+        <div class="headline-box"><h1 class="section-headline">Cosmology</h1></div>
+        <section class="infotext">
+            <p class="infop-variant1">
+                Explore the wonders of our cosmos. Our fantastic exhibition, -The Sky Above Us-, explores the night sky and what 
+                we can see and know about the universe around us. We will locate the various constellations and galaxies that can be seen and learn a bit about the early 
+                navigators who used the stars to travel by.
+            </p>
+            <p class="infop-variant2">
+                Follow the journey of our solar exploration: 
+                from early Arab traders, to Galileos telescope, to the latest exploration of the planets in our 
+                solar system.
+            </p>
+        </section>
+        <div class="image-over-section">
+            <img src="images/fossil.png" alt="an cartoon illutration of a fossil" style="width: 100%; height: auto;">
+        </div>
+        <div class="headline-box"><h1 class="section-headline">Evolution</h1></div>
+        <section class="infotext">
+            <p class="infop-variant1">
+                For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from 
+                and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and 
+                understanding our place in this world.
+
+            </p>
+            <p class="infop-variant2">
+                Discover the origins of life on this planet and how the species we know today have
+                 evolved our time. You can also take some time to meet a few of the creatures who didnt survive, including our Woolly Mammoth, 
+                 the Dodos, and a number of dinosaurs too.
+            </p>
+        </section>
+        <div class="image-over-section">
+            <img src="images/poster.png" alt="a poster with atoms" style="width: 100%; height: auto;">
+        </div>
+        <div class="headline-box"><h1 class="section-headline">Biology and Medicine</h1></div>
+        <section class="infotext">
+            <p class="infop-variant1">
+                For many people their life expectancy is much longer and their quality of life much improved, 
+                thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a 
+                look at some major breakthroughs including the discovery of penicillin and the first heart transplant.
+
+            </p>
+            <p class="infop-variant2">
+                Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. 
+                Often our fellow creatures have beat us to it.
+            </p>
+        </section>
+        <div class="image-over-section">
+            <img src="images/scientest.png" alt="cartoon illutration of a boy-scientest" style="width: 100%; height: auto;">
+        </div>
+
+
+    </main>
+    <footer>
+        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <h3>2024 - Community Science Museum</h3>
+
+       </footer>
     
 </body>
 </html>
