modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   get-involved.html 	modified:   visit-us.html

--- a/get-involved.html
+++ b/get-involved.html
@@ -21,7 +21,7 @@
 
     <main>
         <header>
-            <h1>Special Events and Exhibitions</h1>
+            <h1>Get Involved</h1>
         </header>
 
         <section class="event-section">
