--- a/visit-us.html
+++ b/visit-us.html
@@ -27,7 +27,7 @@
             </div>
         </header>
 
-        <section class="event-section">
+        <section class="contact-section">
            
           <div class="event">
             <h2>Location:</h2>
@@ -38,7 +38,7 @@
           <div class="event">
             <h2>Contact:</h2>
             <p>Phone: 123 45 678</p>
-            <p>Mail: museum@museum.com</p>
+            <p>Mail: csm@museum.com</p>
             <p>Love to hear from you!</p>
           </div>
           
