modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   visit-us.html

--- a/visit-us.html
+++ b/visit-us.html
@@ -29,13 +29,13 @@
 
         <section class="contact-section">
            
-          <div class="event">
+          <div class="contact-box">
             <h2>Location:</h2>
             <p>The museum is located at</p>
             <p>Museum street 21</p>
             <p>Oslo, Norway</p>
           </div>
-          <div class="event">
+          <div class="contact-box">
             <h2>Contact:</h2>
             <p>Phone: 123 45 678</p>
             <p>Mail: csm@museum.com</p>
