modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   images/girl-scientsist.png 	modified:   index.html 	modified:   visit-us.html

--- a/get-involved.html
+++ b/get-involved.html
@@ -44,7 +44,7 @@
                     like to find out more about how you can get involved.</p>  
             </div>
             <div class="imagebox">
-                <img src="images/girl-scientsist.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+                <img src="images/girl-scientsist.png" alt="poster with atoms" class="involved-img" style="width: 160%; height: auto;">  
             </div>
         </div>
         <div class="container-of-yellowbox">
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <div><a href="#top" class="footer-link">Go to top</a></div>
         <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
         <h3>2024 - Community Science Museum</h3>
 
