--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a> </div>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around"  style="width: auto; height: 100px;"></a> </div>
         <ul>
             <li> <a href="explore.html" class="navlink">Explore</a> </li>
             <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <div><a href="#top" class="footer-link">Go to top</a></div>
         <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
         <h3>2024 - Community Science Museum</h3>
 
