--- a/visit-us.html
+++ b/visit-us.html
@@ -105,7 +105,7 @@
         </div>
     </main>
     <footer>
-        <div><a href="#top" class="footer-link">Back to top</a></div>
+        <div><a href="#top" class="footer-link">Go to top</a></div>
         <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
         <h3>2024 - Community Science Museum</h3>
 
