modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </nav>
 
     <main>
-        <a name="top">
-        <header>
+        <header name="top">
         <h1>Community Science Museum</h1>
         <div class="hero">
             <div class="heroimg"><img src="images/hero-background.png" alt="dinosaur standing on a podium inside a museum room" style="width: 100%; height: auto;"></div>
@@ -29,7 +28,6 @@
             </div>
         </div>
          </header>
-        </a>
 
     <section class="infotext">
         <p class="infop"><span class="infostartword">Over</span>  the course of human history, science has developed from our early understanding of fire, wind, water, and 
@@ -50,7 +48,7 @@
         <p class="infop-2"><span class="infostartword">The</span>   aim of our museum is to 
             create a space where everyone can experience the wonders of our discoveries and 
             perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
-         <img src="images/fossil.png"  alt="fossil on display" class="img-on-index"></a>   
+         <img src="images/fossil.png"  alt="fossil on display" class="img-on-index">   
     </section>
 
    <div class="button-singel">
@@ -59,7 +57,7 @@
     </div>
 
     <section class="infotext-2 ">
-        <img src="images/t-rex.png"  alt="t-rex skeleton on display" class="img-on-index" ></a>   
+        <img src="images/t-rex.png"  alt="t-rex skeleton on display" class="img-on-index" >   
         <p class="infop-2"><span class="infostartword">We believe</span>   science should not be confined to the textbook, but brought 
             to live through exhibits. This is why we have over 1000 different exhibits on the 
             many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life.</p>
