modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
 
     <main>
-        <header name="top">
+        <header >
         <h1>Community Science Museum</h1>
-        <div class="hero">
+        <div class="hero" name="top">
             <div class="heroimg"><img src="images/hero-background.png" alt="dinosaur standing on a podium inside a museum room" style="width: 100%; height: auto;"></div>
             <div class="herotext">
                 <h2>"Explore together"</h2>
