modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/get-involved.html
+++ b/get-involved.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>get-involved</title>
 </head>
 <body>
@@ -35,6 +36,9 @@
           </div>
         </section>
         <div class="container-of-yellowbox">
+            <div class="imagebox">
+                <img src="images/girl-scientsist.png" alt="poster with atoms" class="involved-img" style="width: auto; height: auto;">  
+            </div>
             <div class="yellowbox">
                 <h2 class="buttonh2">Volunteer</h2>
                 <p class="yellowbox-p">A number of people volunteer their time and effort to keep the 
@@ -43,9 +47,7 @@
                         <p class="yellowbox-p">Please contact us if you 
                     like to find out more about how you can get involved.</p>  
             </div>
-            <div class="imagebox">
-                <img src="images/girl-scientsist.png" alt="poster with atoms" class="involved-img" style="width: 160%; height: auto;">  
-            </div>
+            
         </div>
         <div class="container-of-yellowbox">
             <div class="imagebox">
@@ -56,8 +58,9 @@
                 <p class="yellowbox-p">Are you interested in working in a museum? </p>
                     <p class="yellowbox-p">Do you enjoy the fun and 
                     excitement of sharing the wonders of nature with people? </p>
-
                     <p class="yellowbox-p">Well you could be just the right person to enjoy an internship at the museum.</p>  
+                    <p class="yellowbox-p">Please contact us if you 
+                        like to find out more about how you can get involved.</p>
             </div>
             
         </div>
