--- a/events.html
+++ b/events.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>events</title>
 </head>
 <body>
