--- a/exhibition.html
+++ b/exhibition.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exhibition-spaces</title>
 </head>
 <body>
