--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/styleguide.css">
     <meta charset="UTF-8" />
+    <meta name="viewport" >
     <title>index page for this school assigment by anna kaijankoski</title>
 </head>
 <body>
