--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" >
     <title>explore</title>
 </head>
 <body>
