--- a/visit-us.html
+++ b/visit-us.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" >
     <title>visit-us</title>
 </head>
 <body>
