--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <link rel="stylesheet" href="css/styleguide.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>index page for this school assigment by anna kaijankoski</title>
 </head>
 <body>
