modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/events.html
+++ b/events.html
@@ -10,7 +10,20 @@
 <body>
     <nav>
         <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
-            class="navlogo" style="width: auto; height: 100px;"></a> </div>
+            class="navlogo" ></a> </div>
+            <nav class="nav-mobil">
+                <input type="checkbox" id="check">
+                <label for="check" class="hamburger">
+                    <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
+                </label>
+                <div class="dropdown-menu">
+                    <a href="explore.html" class="navlink">Explore</a>
+                    <a href="exhibition.html" class="navlink">Exhibition</a>
+                    <a href="events.html" class="navlink">Events</a>
+                    <a href="visit-us.html" class="navlink">Visit us</a>
+                    <a href="get-involved.html" class="navlink">Get involved</a>
+                </div>
+            </nav>
         <ul>
             <li> <a href="explore.html" class="navlink">Explore</a> </li>
             <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
@@ -33,7 +46,7 @@
                 get ready to rough it as we go exploring the wonders of science.</p>
           </div>
           <div class="event-img">
-            <img src="images/night-dino.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+            <img src="images/night-dino.png" alt="poster with atoms" class="night-dino">  
         </div>
         </section>
 
@@ -45,7 +58,7 @@
                 where the future lies in this exciting space.</p>
             </div>
             <div class="event-img">
-              <img src="images/planet-small.png" alt="illustration of a planet with stars around" style="width: 100%; height: auto;">  
+              <img src="images/planet-small.png" alt="illustration of a planet with stars around" class="planet-small">  
           </div>
           </section>
 
@@ -57,8 +70,8 @@
                 experience the power of the elements as we harness them</p>
             </div>
             <div class="event-img">
-              <img src="images/wind1.png" alt="illustration of a planet with stars around" style="width: auto; height: auto;">  
-              <img src="images/wind1.png" alt="illustration of a planet with stars around" style="width: auto; height: auto;">  
+              <img src="images/wind1.png" alt="illustration of a planet with stars around" class="windimg" >  
+              <img src="images/wind1.png" alt="illustration of a planet with stars around" class="windimg" >  
           </div>
           </section>
           <section class="infotext">
@@ -68,12 +81,12 @@
              </p>
             </section>
             <div class="image-over-section">
-                <img src="images/two-rocks.png" alt="cartoon illutration with two rocks" style="width: 100%; height: auto;">
+                <img src="images/two-rocks.png" alt="cartoon illutration with two rocks" class="two-rocks">
             </div>
     </main>
     <footer>
         <div><a href="#top" class="footer-link">Go to top</a></div>
-        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" ></a>
         <h3>2024 - Community Science Museum</h3>
 
        </footer>
