--- a/exhibition.html
+++ b/exhibition.html
@@ -10,7 +10,20 @@
 <body>
     <nav>
         <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
-            class="navlogo" style="width: auto; height: 100px;"></a> </div>
+            class="navlogo" ></a> </div>
+            <nav class="nav-mobil">
+                <input type="checkbox" id="check">
+                <label for="check" class="hamburger">
+                    <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
+                </label>
+                <div class="dropdown-menu">
+                    <a href="explore.html" class="navlink">Explore</a>
+                    <a href="exhibition.html" class="navlink">Exhibition</a>
+                    <a href="events.html" class="navlink">Events</a>
+                    <a href="visit-us.html" class="navlink">Visit us</a>
+                    <a href="get-involved.html" class="navlink">Get involved</a>
+                </div>
+            </nav>
         <ul>
             <li> <a href="explore.html" class="navlink">Explore</a> </li>
             <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
@@ -23,7 +36,7 @@
         <header>
             <h1>Exhibition Spaces</h1>
             <div class="hero">
-                <img src="images/planet-stars.png" alt="illustration of a planet with stars around" style="width: 100%; height: auto;">
+                <img src="images/planet-stars.png" alt="illustration of a planet with stars around" class="planet-stars">
             </div>
         </header>
         <div class="headline-box"><h1 class="section-headline">Cosmology</h1></div>
@@ -40,7 +53,7 @@
             </p>
         </section>
         <div class="image-over-section">
-            <img src="images/fossil.png" alt="an cartoon illutration of a fossil" style="width: 100%; height: auto;">
+            <img src="images/fossil.png" alt="an cartoon illutration of a fossil" class="fossil">
         </div>
         <div class="headline-box"><h1 class="section-headline">Evolution</h1></div>
         <section class="infotext">
@@ -57,7 +70,7 @@
             </p>
         </section>
         <div class="image-over-section">
-            <img src="images/poster.png" alt="a poster with atoms" style="width: 100%; height: auto;">
+            <img src="images/poster.png" alt="a poster with atoms" class="poster">
         </div>
         <div class="headline-box"><h1 class="section-headline">Biology and Medicine</h1></div>
         <section class="infotext">
@@ -73,14 +86,14 @@
             </p>
         </section>
         <div class="image-over-section">
-            <img src="images/scientest.png" alt="cartoon illutration of a boy-scientest" style="width: 100%; height: auto;">
+            <img src="images/scientest.png" alt="cartoon illutration of a boy-scientest" class="scientest">
         </div>
 
 
     </main>
     <footer>
         <div><a href="#top" class="footer-link">Go to top</a></div>
-        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" ></a>
         <h3>2024 - Community Science Museum</h3>
 
        </footer>
