--- a/explore.html
+++ b/explore.html
@@ -10,7 +10,20 @@
 <body>
     <nav>
         <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
-            class="navlogo" style="width: auto; height: 100px;"></a> </div>
+            class="navlogo" ></a> </div>
+            <nav class="nav-mobil">
+                <input type="checkbox" id="check">
+                <label for="check" class="hamburger">
+                    <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
+                </label>
+                <div class="dropdown-menu">
+                    <a href="explore.html" class="navlink">Explore</a>
+                    <a href="exhibition.html" class="navlink">Exhibition</a>
+                    <a href="events.html" class="navlink">Events</a>
+                    <a href="visit-us.html" class="navlink">Visit us</a>
+                    <a href="get-involved.html" class="navlink">Get involved</a>
+                </div>
+            </nav>
         <ul>
             <li> <a href="explore.html" class="navlink">Explore</a> </li>
             <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
@@ -24,7 +37,7 @@
         <header>
             <h1>Explore</h1>
             <div class="hero">
-                <img src="images/kids.png" alt="2 kids playing in sand with dinosaur bones" style="width: 100%; height: auto;">
+                <img src="images/kids.png" alt="2 kids playing in sand with dinosaur bones" class="kids">
             </div>
         </header>
 
@@ -65,7 +78,7 @@
                     <a href="visit-us.html" class="navlink"><img src="images/black-arrow.png" alt="black arrow" class="arrow" ></a>     
             </div>
             <div class="imagebox">
-                <img src="images/poster.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+                <img src="images/poster.png" alt="poster with atoms" class="poster">  
             </div>
         </div>
 
@@ -77,7 +90,7 @@
         </section>
         <div class="container-of-yellowbox">
             <div class="imagebox">
-                <img src="images/science.png" alt="table with science articels on it" style="width: 100%; height: auto;"> 
+                <img src="images/science.png" alt="table with science articels on it" class="science"> 
             </div>
             <div class="yellowbox">
                 <p class="yellowbox-p">Are you looking to get involved with our team of researchers and academics? 
@@ -91,7 +104,7 @@
 
     <footer>
         <div><a href="#top" class="footer-link">Go to top</a></div>
-        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" ></a>
         <h3>2024 - Community Science Museum</h3>
 
        </footer>
