--- a/get-involved.html
+++ b/get-involved.html
@@ -10,7 +10,20 @@
 <body>
     <nav>
         <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
-            class="navlogo" style="width: auto; height: 100px;"></a> </div>
+            class="navlogo" ></a> </div>
+            <nav class="nav-mobil">
+                <input type="checkbox" id="check">
+                <label for="check" class="hamburger">
+                    <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
+                </label>
+                <div class="dropdown-menu">
+                    <a href="explore.html" class="navlink">Explore</a>
+                    <a href="exhibition.html" class="navlink">Exhibition</a>
+                    <a href="events.html" class="navlink">Events</a>
+                    <a href="visit-us.html" class="navlink">Visit us</a>
+                    <a href="get-involved.html" class="navlink">Get involved</a>
+                </div>
+            </nav>
         <ul>
             <li> <a href="explore.html" class="navlink">Explore</a> </li>
             <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
@@ -27,7 +40,7 @@
 
         <section class="event-section">
             <div class="event-img">
-                <img src="images/two-rocks.png" alt="two rocks cartoon illutration" style="width: 100%; height: auto;">  
+                <img src="images/two-rocks.png" alt="two rocks cartoon illutration" class="two-rocks">  
             </div>
           <div class="event">
             <h2>Support</h2>
@@ -37,7 +50,7 @@
         </section>
         <div class="container-of-yellowbox">
             <div class="imagebox">
-                <img src="images/girl-scientsist.png" alt="poster with atoms" class="involved-img" style="width: auto; height: auto;">  
+                <img src="images/girl-scientsist.png" alt="poster with atoms" class="involved-img" >  
             </div>
             <div class="yellowbox">
                 <h2 class="buttonh2">Volunteer</h2>
@@ -51,7 +64,7 @@
         </div>
         <div class="container-of-yellowbox">
             <div class="imagebox">
-                <img src="images/scientest.png" alt="poster with atoms" style="width: 100%; height: auto;">  
+                <img src="images/scientest.png" alt="poster with atoms" class="scientest">  
             </div>
             <div class="yellowbox">
                 <h2 class="buttonh2">Internships</h2>
@@ -65,14 +78,14 @@
             
         </div>
         <div class="image-over-section">
-            <img src="images/dino.png" alt="cartoon illutration of a skeleton t-rex" style="width: 100%; height: auto;">
+            <img src="images/dino.png" alt="cartoon illutration of a skeleton t-rex" class="dino" >
         </div>
 
     </main>
 
     <footer>
         <div><a href="#top" class="footer-link">Go to top</a></div>
-        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" style="width: auto; height: 60px;"></a>
+        <a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" class="navlogo" ></a>
         <h3>2024 - Community Science Museum</h3>
 
        </footer>
