--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header >
         <h1>Community Science Museum</h1>
         <div class="hero" name="top">
-            <div class="heroimg"><img src="images/hero-background.png" alt="dinosaur standing on a podium inside a museum room" class="hero"></div>
+            <div class="heroimg"><img src="images/hero-background.png" alt="dinosaur standing on a podium inside a museum room" class="hero-background"></div>
             <div class="herotext">
                 <h2>"Explore together"</h2>
                 <p class="herop">Come join us at the Community Science Museum where we are committed to making science accessible to all.</p>
