modified:   explore.html

--- a/explore.html
+++ b/explore.html
@@ -61,8 +61,7 @@
                 <h2 class="buttonh2">School holidays</h2>
                 <p class="yellowbox-p">we run special holiday clubs where you can join other 
                     children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. 
-                    To find out more about the holiday club and how you can join, </p>
-                <a href="visit-us.html" class="navlink"><img src="images/black-arrow.png" alt="black arrow" class="arrow" ></a> 
+                    To find out more about the holiday club and how you can join </p>
             </div>
         </div>
         <div class="headline-box"><h1 class="section-headline">For teachers</h1></div>
