modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
     <meta charset="UTF-8" />
+    <meta name="description" content="this is a website for s school assigment, a comumunety science museum, so here i would have keep words to describe the place and activity">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>index page for this school assigment by anna kaijankoski</title>
