deleted:    .vscode/settings.json 	renamed:    css/styleguide-explore-exhibition-event.css -> css/styleguide-pages.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/explore.html
+++ b/explore.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/styleguide.css">
-    <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
+    <link rel="stylesheet" href="css/styleguide-pages.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>explore</title>
