--- a/exhibition.html
+++ b/exhibition.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <link rel="stylesheet" href="css/styleguide.css">
-    <link rel="stylesheet" href="css/styleguide-explore-exhibition-event.css">
+    <link rel="stylesheet" href="css/styleguide-pages.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>exhibition-spaces</title>
