--- a/events.html
+++ b/events.html
@@ -9,28 +9,21 @@
 </head>
 <body>
     <nav>
-        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around" 
-            class="navlogo" ></a> </div>
-            <nav class="nav-mobil">
-                <input type="checkbox" id="check">
-                <label for="check" class="hamburger">
-                    <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
-                </label>
-                <div class="dropdown-menu">
-                    <a href="explore.html" class="navlink">Explore</a>
-                    <a href="exhibition.html" class="navlink">Exhibition</a>
-                    <a href="events.html" class="navlink">Events</a>
-                    <a href="visit-us.html" class="navlink">Visit us</a>
-                    <a href="get-involved.html" class="navlink">Get involved</a>
-                </div>
-            </nav>
-        <ul>
-            <li> <a href="explore.html" class="navlink">Explore</a> </li>
-            <li> <a href="exhibition.html" class="navlink">Exhibition</a></li>
-            <li> <a href="events.html" class="navlink">Events</a></li>
-            <li> <a href="visit-us.html" class="navlink">Visit us</a></li>
-            <li><a href="get-involved.html" class="navlink">Get involved</a></li>
-        </ul>
+        <div><a href="index.html"> <img src="images/logo.png" alt="logo for the community sience museum a keyhole with atoms around"  class="logo"></a> </div>
+        <div class="nav-mobil">
+            <input type="checkbox" id="check">
+            <label for="check" class="hamburger">
+                <img src="images/hamburger-menu.png" alt="hamburger dropdown icon">
+            </label>
+            <div class="dropdown-menu">
+                <a href="explore.html" class="navlink">Explore</a>
+                <a href="exhibition.html" class="navlink">Exhibition</a>
+                <a href="events.html" class="navlink">Events</a>
+                <a href="visit-us.html" class="navlink">Visit us</a>
+                <a href="get-involved.html" class="navlink">Get involved</a>
+            </div>
+        </div>
+   
     </nav>
 
     <main>
@@ -90,6 +83,6 @@
         <h3>2024 - Community Science Museum</h3>
 
        </footer>
-       <div>updated</div>
+       
 </body>
 </html>
